test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_5.k
import pkg

schema Data(pkg.Base):
    name: str
